istio/vets-service-deployment-v02.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vets-service
    version: "0.2"
  name: vets-service-v02
  namespace: spring-petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vets-service
      version: "0.2"
  strategy: {}
  template:
    metadata:
      labels:
        app: vets-service
        version: "0.2"
    spec:
      containers:
      - image: maeddes/spring-petclinic-cloud-vets-service:v0.2
        name: vets-service
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            port: 8080
            path: /actuator/health/liveness
          initialDelaySeconds: 90
          periodSeconds: 5
        readinessProbe:
          httpGet:
            port: 8080
            path: /actuator/health/readiness
          initialDelaySeconds: 15
        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c", "sleep 10"]
        resources:
          limits:
            memory: 1Gi
          requests:
            cpu: 2000m
            memory: 1Gi
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
status: {}
