istio/gateway-petclinic.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: petclinic
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - petclinic.40.67.222.119.nip.io
