istio/vs-petclinic.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: petclinic-web
spec:
  hosts:
  - petclinic.40.67.222.119.nip.io
  gateways:
  - petclinic
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: api-gateway.spring-petclinic.svc.cluster.local
        port:
          number: 80
