istio/vs-prometheus.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
spec:
  hosts:
  - istio.40.67.222.119.nip.io
  gateways:
  - istio
  http:
  - match:
    - uri:
        prefix: /prometheus
    route:
    - destination:
        host: prometheus.istio-system.svc.cluster.local
        port:
          number: 9090
